# task-timer-cli

./: .gitignore  CMakeLists.txt  README.md  TimerLogic.cpp  TimerLogic.h  TimerRecord.h  TimerState.cpp  TimerState.h  main.cpp
